added makefile to insterpreter.cpp

--- a/common_files/Makefile
+++ b/common_files/Makefile
@@ -1,9 +1,15 @@
 ## command.o lib ##
-command.o: BUILD.H common_files/command.hpp common_files/command.cpp
-	g++ -Wall -c "common_files/command.cpp"
+command.o: BUILD.H command.hpp command.cpp
+	g++ -Wall -I"./" -c "command.cpp"
+	
+## command.o lib ##
+utils.o: BUILD.H utils.hpp utils.cpp
+	g++ -Wall -I"./" -c "utils.cpp"
 
 clean:
 	rm $(find . -type f -perm /+u+x) &
 	rm *.gch &
 	rm *.o
 	
+BUILD.H:
+#nothing
