compiler + interpriter are working with linker

--- a/Interpreter/Makefile
+++ b/Interpreter/Makefile
@@ -2,7 +2,7 @@
 # g++ -Wall -o "%e" "%f"
 
 ## libs list ##
-libs_list = common_files/command.o common_files/utils.o stack_cpu.o
+libs_list = common_files/command.o common_files/utils.o stack_cpu.o common_files/linker.o
 
 
 ## main ##
@@ -36,7 +36,7 @@ common_files/utils.o: BUILD.H ./common_files/utils.hpp ./common_files/utils.cpp
 	make -C common_files/ utils.o
 	
 ## common_files/linker.o lib ##
-common_files/utils.o: BUILD.H ./common_files/linker.hpp ./common_files/linker.cpp
+common_files/linker.o: BUILD.H ./common_files/linker.hpp ./common_files/linker.cpp
 	make -C common_files/ linker.o
 	
 BUILD.H:
