--- a/Compiler/Makefile
+++ b/Compiler/Makefile
@@ -33,7 +33,7 @@ common_files/utils.o: BUILD.H ./common_files/utils.hpp ./common_files/utils.cpp
 	make -C common_files/ utils.o
 	
 ## common_files/linker.o lib ##
-common_files/utils.o: BUILD.H ./common_files/linker.hpp ./common_files/linker.cpp
+common_files/linker.o: BUILD.H ./common_files/linker.hpp ./common_files/linker.cpp
 	make -C common_files/ linker.o
 	
 BUILD.H:
