--- a/common_files/Makefile
+++ b/common_files/Makefile
@@ -9,6 +9,10 @@ utils.o: BUILD.H utils.hpp utils.cpp
 ## linker.o lib ##
 linker.o: BUILD.H linker.hpp linker.cpp
 	g++ -Wall -I"./" -c "linker.cpp"
+	
+## stack_cpu.o lib ##
+stack_cpu.o: BUILD.H stack_cpu.hpp stack_cpu.cpp
+	g++ -Wall -I"./" -c "stack_cpu.cpp"
 
 clean:
 	rm $(find . -type f -perm /+u+x) &
